# jitcc

./: .gitignore  CMakeLists.txt  README.md  ivpm.yaml  setup.py
python/: core.pyx
python/jitcc/: core.pxd  decl.pxd
src/: CMakeLists.txt  Factory.cpp  Factory.h  TinyCC.cpp  TinyCC.h
test/unit/: test_base.py  test_smoke.py
